--- a/apps/poc-state-plugin/project.json
+++ b/apps/poc-state-plugin/project.json
@@ -4,7 +4,7 @@
   "projectType": "application",
   "prefix": "app",
   "sourceRoot": "apps/poc-state-plugin/src",
-  "tags": [],
+  "tags": ["type:plugin"],
   "targets": {
     "buildPlugin": {
       "executor": "@nx/esbuild:esbuild",
