--- a/apps/poc-state-plugin/src/assets/manifest.json
+++ b/apps/poc-state-plugin/src/assets/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "POC State Read",
-  "code": "http://localhost:4202/assets/plugin.js",
+  "host": "http://localhost:4202",
+  "code": "/assets/plugin.js",
   "permissions": [
     "page:read",
     "file:read",
