feat: add icon to the state plugin

--- a/apps/poc-state-plugin/src/assets/manifest.json
+++ b/apps/poc-state-plugin/src/assets/manifest.json
@@ -1,7 +1,9 @@
 {
   "name": "POC State Read",
+  "description": "Sandbox plugin for plugins development",
   "host": "http://localhost:4202",
   "code": "/assets/plugin.js",
+  "icon": "/assets/icon.png",
   "permissions": [
     "page:read",
     "file:read",
