feat(poc-state-plugin): add new functions to the plugin to test comments and rulers

--- a/apps/poc-state-plugin/src/assets/manifest.json
+++ b/apps/poc-state-plugin/src/assets/manifest.json
@@ -3,10 +3,10 @@
   "description": "Sandbox plugin for plugins development",
   "code": "/assets/plugin.js",
   "permissions": [
-    "content:read",
     "content:write",
-    "library:read",
     "library:write",
-    "user:read"
+    "comment:write",
+    "user:read",
+    "allow:downloads"
   ]
 }
