feat(poc-state-plugins): example using the localstorage api

--- a/apps/poc-state-plugin/src/assets/manifest.json
+++ b/apps/poc-state-plugin/src/assets/manifest.json
@@ -7,6 +7,7 @@
     "library:write",
     "comment:write",
     "user:read",
-    "allow:downloads"
+    "allow:downloads",
+    "allow:localstorage"
   ]
 }
