--- a/apps/poc-state-plugin/tsconfig.plugin.json
+++ b/apps/poc-state-plugin/tsconfig.plugin.json
@@ -4,5 +4,5 @@
     "types": []
   },
   "files": ["src/plugin.ts"],
-  "include": ["../../libs/plugin-types/index.d.ts"],
+  "include": ["../../libs/plugin-types/index.d.ts"]
 }
